--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2315,11 +2315,13 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		
 	}
 
 		.image img {
 			border-radius: 4px;
 			display: block;
+			
 		}
 
 		.image.left, .image.right {
@@ -2574,6 +2576,7 @@ input, select, textarea {
 		flex-wrap: wrap;
 		position: relative;
 		margin: -2.5em 0 0 -2.5em;
+		justify-content: center;
 	}
 
 		.tiles article {
@@ -2582,7 +2585,7 @@ input, select, textarea {
 			-ms-transition: -ms-transform 0.5s ease, opacity 0.5s ease;
 			transition: transform 0.5s ease, opacity 0.5s ease;
 			position: relative;
-			width: calc(33.33333% - 2.5em);
+			width: 325px;
 			margin: 2.5em 0 0 2.5em;
 		}
 
@@ -2970,6 +2973,7 @@ input, select, textarea {
 		-ms-transition: opacity 0.45s ease;
 		transition: opacity 0.45s ease;
 		opacity: 1;
+		margin-top: 20px;
 	}
 
 	#menu {
@@ -3152,6 +3156,7 @@ input, select, textarea {
 
 	#main {
 		padding: 0em 0 6em 0 ;
+		justify-content: center;
 	}
 
 		@media screen and (max-width: 736px) {
