--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
                     {{ person.status}}<br>
                     In Seasons : {{ person.appearance}}<br>
                     {{ person.portrayed}}<br>
-                    {{ person.category}} <br>
+                    In : {{ person.category}} <br>
                     {{ person.better_call_saul_apperance}}<br>
                   </p>
                 </div>
